# euroscipy-2025-sbi-tutorial

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
materials/: references.md
slides/: sbi_tutorial.md  slide_outline.md
src/: 00_setup_test.py  01_first_inference.ipynb  02_diagnostics.ipynb  03_your_problem.ipynb  03_your_sbi_problem.ipynb  lv_inference.pt  lv_inference_autocorr.pt  lv_inference_without_autocorrelation.pt  utils.py
src/simulators/: README.md  __init__.py  ball_throw.py  lotka_volterra.py  sir_model.py
