[project]
name = "euroscipy-2025-sbi-tutorial"
version = "0.1.0"
description = "EuroSciPy 2025 Tutorial: Simulation-Based Inference with sbi"
readme = "README.md"
authors = [
    { name = "Jan Teusen (Boelts)", email = "jan.boelts@mailbox.org" }
]
requires-python = ">=3.10"
dependencies = [
    "sbi",
    "torch",
    "matplotlib",
    "numpy",
    "seaborn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simulators"]
