[project]
name = "euroscipy-2025-sbi-tutorial"
version = "0.1.0"
description = "EuroSciPy 2025 Tutorial: Simulation-Based Inference with sbi"
readme = "README.md"
authors = [
    { name = "Jan Teusen (Boelts)", email = "jan.boelts@mailbox.org" }
]
requires-python = ">=3.10"
dependencies = [
    "sbi",
    "torch",
    "matplotlib",
    "numpy",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pyright",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simulators"]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = ["*.ipynb"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Pyright configuration
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportDuplicateImport = true
exclude = [
    "**/__pycache__",
    ".venv",
    "sbi-logs",
]
